added possibility to update the group description & the avatar
see #417
